--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Women's Healthcare resources in the palm of your hand.",
   "main": "server.js",
   "scripts": {
+    "client-dev": "webpack-dev-server",
     "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
