--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "css-loader": "0.25.0",
     "enzyme": "2.0.0",
     "enzyme-to-json": "^1.3.0",
-    "eslint": "3.6.1",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "6.1.0",
     "eslint-config-standard-jsx": "3.1.0",
     "eslint-config-standard-react": "4.1.0",
