--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Women's Healthcare resources in the palm of your hand.",
   "main": "server.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint .",
     "wds": "webpack-dev-server",
     "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "startdb": "mongod --dbpath ~/.hah/data",
