--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "config": "^1.24.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-session": "^1.15.2",
     "history": "^4.4.0",
     "lodash": "^4.17.4",
     "log": "^1.4.0",
     "mapbox": "^1.0.0-beta5",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.5",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "preact": "^6.4.0",
     "preact-compat": "^3.9.3",
     "react": "15.3.2",
