--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: node_js
 
 node_js:
-  - "6.9.4"
+  - 6.9.4
 
-before_script:
-  - yarn install
+cache:
+  - yarn: true
+  - directories:
+    - node_modules
+
+services:
+  - mongodb
+
+script:
+  - npm run lint
+  - node server/server.js
