--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
     "axios": "0.15.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
+    "boom": "^4.3.1",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "config": "^1.24.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-boom": "^2.0.0",
     "history": "^4.4.0",
+    "joi": "^10.4.1",
+    "joi-phone-validator": "^1.0.0",
     "lodash": "^4.17.4",
     "log": "^1.4.0",
     "mapbox": "^1.0.0-beta5",
+    "mocha": "^3.2.0",
     "mongodb": "^2.2.16",
     "mongodb-extended-json": "^1.9.0",
     "mongoose": "^4.7.5",
