--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "log": "^1.4.0",
     "mapbox": "^1.0.0-beta5",
     "mocha": "^3.2.0",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.16",
     "mongodb-extended-json": "^1.9.0",
     "mongoose": "^4.7.5",
