--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "wds": "webpack-dev-server",
     "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "startdb": "mongod --dbpath ~/.hah/data",
-    "test": "mocha",
+    "test": "NODE_ENV=test mocha",
     "n": "nvm use lts/boron",
     "c": "export NODE_CONFIG_DIR=~/Documents/code/help-assist-her/config"
   },
