changed scripts to use node rather than nodemon, removed await-to-js

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "NODE_ENV=test mocha",
     "n": "nvm use stable",
     "c": "export NODE_CONFIG_DIR=~/Documents/code/help-assist-her/config",
-    "data": "NODE_ENV=localhost nodemon ./data/data.js",
-    "geocode": "NODE_ENV=localhost nodemon ./data/geocode.js"
+    "data": "NODE_ENV=localhost node ./data/data.js",
+    "geocode": "NODE_ENV=localhost node ./data/geocode.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,6 @@
   "dependencies": {
     "@google/maps": "^0.3.1",
     "@turf/turf": "^3.7.4",
-    "await-to-js": "^1.0.1",
     "axios": "0.15.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
