test - changing order of the script and removing the ampersands

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
   - mongodb
 
 script:
-  - node server/server.js &
-  - yarn wds &
   - yarn lint
+  - node server/server.js
+  - yarn wds
+
