--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "preact-compat": "^3.9.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-facebook-login": "^3.6.1",
     "react-jss": "^6.1.1",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
@@ -69,8 +70,8 @@
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.7",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "6.18.0",
