--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack": "^2.5.1"
   },
   "devDependencies": {
     "babel-core": "6.16.0",
@@ -100,7 +101,6 @@
     "react-test-renderer": "15.3.2",
     "style-loader": "0.13.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
 }
