--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "7.9.0"
   },
   "scripts": {
+    "build:html": "babel-node client/tools/build-html.js",
     "lint": "./node_modules/.bin/eslint .",
     "lint-path": "./node_modules/.bin/eslint",
     "wds": "webpack-dev-server",
@@ -37,6 +38,8 @@
     "boom": "^4.3.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "cheerio": "^1.0.0-rc.1",
+    "colors": "^1.1.2",
     "config": "^1.24.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
@@ -70,12 +73,13 @@
     "webpack": "^2.5.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "6.16.0",
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.7",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "6.18.0",
