--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-es2017": "6.16.0",
+    "babel-preset-react": "6.16.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "boom": "^4.3.1",
@@ -85,18 +88,13 @@
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.7",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-es2017": "6.16.0",
-    "babel-preset-react": "6.16.0",
     "babel-register": "6.16.0",
     "css-loader": "0.25.0",
-    "enzyme": "2.0.0",
-    "enzyme-to-json": "^1.3.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "6.1.0",
     "eslint-config-standard-jsx": "3.1.0",
     "eslint-config-standard-react": "4.1.0",
-    "eslint-loader": "1.3.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-react": "6.3.0",
     "eslint-plugin-standard": "2.0.0",
@@ -106,7 +104,6 @@
     "react-addons-test-utils": "15.3.2",
     "react-test-renderer": "15.3.2",
     "style-loader": "0.13.1",
-    "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.5"
   }
 }
