--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-es2017": "6.16.0",
