--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "syntax-async-functions",
     "transform-async-to-generator",
     "transform-class-properties",
     "transform-object-rest-spread",
