--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:html": "babel-node client/tools/build-html.js",
     "lint": "./node_modules/.bin/eslint .",
     "lint-path": "./node_modules/.bin/eslint",
-    "wds": "webpack-dev-server",
+    "wds": "webpack-dev-server --content-base public/",
     "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "startdb": "mongod --dbpath ~/.hah/data",
     "test": "NODE_ENV=test mocha 'server/data-import/test/test.js'",
