--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "config": "^1.24.0",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "express": "^4.14.0",
