--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lodash": "^4.17.4",
     "log": "^1.4.0",
     "mapbox": "^1.0.0-beta5",
+    "material-ui": "^0.18.3",
     "mocha": "^3.2.0",
     "moment": "^2.18.1",
     "mongodb": "^2.2.16",
@@ -86,6 +87,7 @@
     "react-jss": "^6.1.1",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
