--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "mapbox": "^1.0.0-beta5",
     "mocha": "^3.2.0",
     "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0",
     "mongodb": "^2.2.16",
     "mongodb-extended-json": "^1.9.0",
     "mongoose": "^4.7.5",
