--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "./node_modules/.bin/eslint .",
     "lint-path": "./node_modules/.bin/eslint",
     "wds": "webpack-dev-server --content-base public/",
-    "start": "set NODE_ENV=localhost& nodemon ./server/server.js",
+    "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "startdb": "mongod --dbpath ~/.hah/data",
     "test": "NODE_ENV=test mocha 'server/test/test.js'",
     "n": "nvm use default",
