Add prettier, pretty-quick, and husky npm packages

--- a/package.json
+++ b/package.json
@@ -106,8 +106,11 @@
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-react": "6.3.0",
     "eslint-plugin-standard": "2.0.0",
+    "husky": "^0.14.3",
     "jest": "15.1.1",
     "jsdom": "9.5.0",
+    "prettier": "1.12.1",
+    "pretty-quick": "^1.5.1",
     "react-addons-test-utils": "15.3.2",
     "react-test-renderer": "15.3.2",
     "style-loader": "0.13.1",
