--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "scripts": {
     "build": "NODE_ENV=production babel-node client/tools/build.js",
     "build:html": "babel-node client/tools/build-html.js",
+    "clear-iv": "NODE_ENV=localhost node ./server/scripts/clear-in-verification-field.js",
+    "geocode": "NODE_ENV=localhost node ./server/data-import/geocode.js",
     "lint": "./node_modules/.bin/eslint .",
     "lint-path": "./node_modules/.bin/eslint",
-    "wds": "webpack-dev-server --content-base public/",
+    "n": "nvm use default",
+    "overwrite-fqhc-data": "NODE_ENV=localhost node ./server/data-import/overwrite-fqhc-data.js",
+    "overwrite-pc-data": "NODE_ENV=localhost node ./server/data-import/overwrite-pc-data.js",
     "start": "NODE_ENV=localhost nodemon ./server/server.js",
     "startdb": "mongod --dbpath ~/.hah/data",
     "test": "NODE_ENV=test mocha 'server/test/test.js'",
-    "n": "nvm use default",
-    "overwrite-pc-data": "NODE_ENV=localhost node ./server/data-import/overwrite-pc-data.js",
-    "overwrite-fqhc-data": "NODE_ENV=localhost node ./server/data-import/overwrite-fqhc-data.js",
     "test-data": "NODE_ENV=localhost node ./server/data-import/test-data.js",
-    "geocode": "NODE_ENV=localhost node ./server/data-import/geocode.js",
-    "clear-iv": "NODE_ENV=localhost node ./server/scripts/clear-in-verification-field.js"
+    "wds": "webpack-dev-server --content-base public/"
   },
   "repository": {
     "type": "git",
