--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
 		"react-redux": "^5.0.4",
 		"react-router-dom": "^4.1.1",
 		"react-router-tabs": "^1.2.0",
+		"react-tooltip": "^3.6.1",
 		"redux": "^3.6.0",
 		"redux-form": "^7.1.2",
 		"redux-thunk": "^2.2.0",
