--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
 	"extends": ["eslint:recommended", "plugin:react/recommended"],
 
 	"rules": {
+		"comma-dangle": ["error", "always-multiline"],
 		"eol-last": ["error", "always"],
 		"eqeqeq": ["error", "always"],
 		"indent": ["error", "tab", { "SwitchCase": 1 }],
