--- a/package.json
+++ b/package.json
@@ -98,8 +98,7 @@
 		"react-router-tabs": "^1.2.0",
 		"redux": "^3.6.0",
 		"redux-form": "^7.1.2",
-		"redux-thunk": "^2.2.0",
-		"webpack": "^2.5.1"
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.2.5",
@@ -122,6 +121,8 @@
 		"react-addons-test-utils": "15.3.2",
 		"react-test-renderer": "15.3.2",
 		"style-loader": "0.13.1",
+		"webpack": "^4.17.1",
+		"webpack-cli": "^3.1.0",
 		"webpack-dev-server": "^2.4.5"
 	}
 }
