--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
 		"babel-plugin-transform-object-rest-spread": "^6.23.0",
 		"babel-plugin-transform-regenerator": "^6.24.1",
 		"babel-polyfill": "^6.23.0",
-		"babel-preset-react": "6.16.0",
 		"babel-register": "6.16.0",
 		"bluebird": "^3.4.7",
 		"body-parser": "^1.16.1",
@@ -104,6 +103,7 @@
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.0-beta",
+		"babel-preset-react": "^6.24.1",
 		"css-loader": "0.25.0",
 		"eslint": "^5.0.1",
 		"eslint-config-standard": "^11.0.0",
