--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
   "plugins": [
-    "syntax-async-functions",
-    "transform-async-to-generator",
-    "transform-class-properties",
-    "transform-object-rest-spread",
-    "transform-regenerator"
+	  "syntax-async-functions",
+	  "transform-async-to-generator",
+	  "transform-class-properties",
+	  "transform-object-rest-spread",
+	  "transform-regenerator"
   ],
   "presets": [
-    "env",
-    "react"
+	  "@babel/env",
+	  "react"
   ]
 }
