--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
 		"@turf/turf": "^3.7.4",
 		"axios": "0.15.2",
 		"babel-cli": "^6.24.1",
-		"babel-plugin-syntax-async-functions": "^6.13.0",
-		"babel-plugin-transform-async-to-generator": "^6.22.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
 		"babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -99,11 +97,13 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0-rc.2",
+		"@babel/plugin-transform-async-to-generator": "^7.0.0-rc.2",
 		"@babel/preset-env": "^7.0.0-rc.2",
 		"@babel/preset-react": "^7.0.0-rc.2",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.0-beta",
+		"babel-plugin-syntax-async-functions": "^6.13.0",
 		"css-loader": "0.25.0",
 		"eslint": "^5.0.1",
 		"eslint-config-standard": "^11.0.0",
