--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "plugins": [
 //	  "syntax-async-functions",
 //	  "transform-async-to-generator",
-//	  "transform-class-properties",
+	  "transform-class-properties",
 	  "transform-object-rest-spread"
 //	  "transform-regenerator"
   ],
