--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.0-beta",
+		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"css-loader": "0.25.0",
 		"eslint": "^5.0.1",
