--- a/package.json
+++ b/package.json
@@ -89,14 +89,14 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0-rc.2",
+		"@babel/plugin-proposal-class-properties": "^7.0.0-rc.2",
+		"@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
 		"@babel/plugin-transform-async-to-generator": "^7.0.0-rc.2",
 		"@babel/preset-env": "^7.0.0-rc.2",
 		"@babel/preset-react": "^7.0.0-rc.2",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.0-beta",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"css-loader": "^1.0.0",
 		"eslint": "^5.0.1",
 		"eslint-config-standard": "^11.0.0",
