--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "plugins": [
 	  "@babel/plugin-proposal-class-properties",
-	  "@babel/plugin-proposal-object-rest-spread"
-//	  "syntax-async-functions",
-//	  "transform-async-to-generator",
-//	  "transform-regenerator"
+	  "@babel/plugin-proposal-object-rest-spread",
+	  "@babel/plugin-transform-regenerator"
   ],
   "presets": [
 	  "@babel/env",
