--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
 		"overwrite-pc-data":
 			"NODE_ENV=localhost node ./server/data-import/overwrite-pc-data.js",
 		"precommit": "pretty-quick --staged",
-		"prepare": "yarn webpack",
+		"prepare": "webpack",
 		"start": "NODE_ENV=localhost nodemon ./server/server.js",
 		"startdb": "mongod --dbpath ~/.hah/data",
 		"test": "NODE_ENV=test mocha 'server/test/test.js' --timeout 3000",
 		"test-data": "NODE_ENV=localhost node ./server/data-import/test-data.js",
+		"watch": "webpack --watch",
 		"wds": "webpack-dev-server --content-base public/"
 	},
 	"repository": {
