--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"preact-compat": "^3.9.3",
 		"ramda": "0.26.1",
 		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
 		"react-facebook-login": "^3.6.1",
 		"react-jss": "^6.1.1",
 		"react-redux": "^5.0.4",
