--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"react-jss": "^8.6.1",
 		"react-redux": "^5.0.4",
 		"react-responsive": "^5.0.0",
+		"react-router-dom": "^5.0.1",
 		"react-router-tabs": "^1.2.0",
 		"react-tooltip": "^3.6.1",
 		"react-typeform-embed": "^0.2.0",
