--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-redux": "^5.0.4",
 		"react-responsive": "^7.0.0",
 		"react-router-dom": "^5.0.1",
+		"react-router-tabs": "^1.3.2",
 		"react-tooltip": "^3.6.1",
 		"react-typeform-embed": "^0.2.0",
 		"redux": "^3.6.0",
