--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"react-router-dom": "^5.0.1",
 		"react-router-tabs": "^1.3.2",
 		"react-tooltip": "^3.10.0",
+		"react-typeform-embed": "^0.2.1",
 		"redux": "^3.6.0",
 		"redux-form": "^7.1.2",
 		"redux-thunk": "^2.2.0"
