--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"ramda": "0.26.1",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
+		"react-facebook-login": "^4.1.1",
 		"react-jss": "^8.6.1",
 		"react-redux": "^5.0.4",
 		"react-responsive": "^7.0.0",
