--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.0.0-rc.2",
+		"@babel/core": "^7.5.5",
 		"@babel/plugin-proposal-class-properties": "^7.0.0-rc.2",
 		"@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
 		"@babel/plugin-transform-async-to-generator": "^7.0.0-rc.2",
