--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.5.5",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
+		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
 		"@babel/plugin-transform-async-to-generator": "^7.0.0-rc.2",
 		"@babel/plugin-transform-regenerator": "^7.0.0-rc.2",
 		"@babel/preset-env": "^7.0.0-rc.2",
