--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
 		"@babel/plugin-transform-async-to-generator": "^7.5.0",
-		"@babel/plugin-transform-regenerator": "^7.0.0-rc.2",
+		"@babel/plugin-transform-regenerator": "^7.4.5",
 		"@babel/preset-env": "^7.0.0-rc.2",
 		"@babel/preset-react": "^7.0.0-rc.2",
 		"babel-eslint": "^8.2.5",
