--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
 		"@babel/plugin-transform-async-to-generator": "^7.5.0",
 		"@babel/plugin-transform-regenerator": "^7.4.5",
 		"@babel/preset-env": "^7.5.5",
-		"@babel/preset-react": "^7.0.0-rc.2",
+		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.0-beta",
