--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
-		"babel-loader": "^8.0.0-beta",
+		"babel-loader": "^8.0.6",
 		"css-loader": "^3.2.0",
 		"eslint": "^5.0.1",
 		"eslint-config-standard": "^11.0.0",
