--- a/package.json
+++ b/package.json
@@ -73,28 +73,28 @@
 		"passport": "^0.3.2",
 		"passport-facebook-token": "^3.3.0",
 		"ramda": "0.26.1",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0",
+		"react": "16.10.2",
+		"react-dom": "16.10.2",
 		"react-facebook-login": "^4.1.1",
-		"react-jss": "^8.6.1",
-		"react-redux": "^7.1.0",
-		"react-responsive": "^7.0.0",
-		"react-router-dom": "^5.0.1",
+		"react-jss": "10.0.0",
+		"react-redux": "7.1.1",
+		"react-responsive": "8.0.1",
+		"react-router-dom": "5.1.2",
 		"react-router-tabs": "^1.3.2",
-		"react-tooltip": "^3.10.0",
+		"react-tooltip": "3.11.1",
 		"react-typeform-embed": "^0.2.1",
 		"redux": "^4.0.4",
 		"redux-form": "^8.2.6",
 		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.5.5",
+		"@babel/core": "7.6.4",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+		"@babel/plugin-proposal-object-rest-spread": "7.6.2",
 		"@babel/plugin-transform-async-to-generator": "^7.5.0",
 		"@babel/plugin-transform-regenerator": "^7.4.5",
-		"@babel/preset-env": "^7.5.5",
-		"@babel/preset-react": "^7.0.0",
+		"@babel/preset-env": "7.6.3",
+		"@babel/preset-react": "7.6.3",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.6",
@@ -113,10 +113,10 @@
 		"prettier": "1.12.1",
 		"pretty-quick": "^1.5.1",
 		"react-addons-test-utils": "^15.6.2",
-		"react-test-renderer": "^16.9.0",
+		"react-test-renderer": "16.10.2",
 		"style-loader": "^1.0.0",
 		"svg-to-react-cli": "^1.5.0",
-		"webpack": "^4.39.3",
-		"webpack-cli": "^3.3.7"
+		"webpack": "4.41.0",
+		"webpack-cli": "3.3.9"
 	}
 }
