--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
 		"lodash": "4.17.13",
 		"log": "^1.4.0",
 		"mapbox": "^1.0.0-beta5",
-		"mocha": "^3.2.0",
+		"mocha": "6.2.1",
 		"moment": "2.19.3",
 		"mongodb": "^2.2.16",
 		"mongodb-extjson": "^3.0.3",
