--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
 		"bluebird": "^3.4.7",
 		"body-parser": "^1.16.1",
 		"boom": "^4.3.1",
-		"chai": "^3.5.0",
-		"chai-http": "^3.0.0",
+		"chai": "4.2.0",
+		"chai-http": "4.3.0",
 		"cheerio": "^1.0.0-rc.1",
 		"classnames": "^2.2.6",
 		"colors": "^1.1.2",
