--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
 		"@babel/plugin-transform-regenerator": "^7.4.5",
 		"@babel/preset-env": "7.6.3",
 		"@babel/preset-react": "7.6.3",
-		"babel-eslint": "^8.2.5",
+		"babel-eslint": "10.0.3",
 		"babel-jest": "16.0.0",
 		"babel-loader": "^8.0.6",
 		"css-loader": "^3.2.0",
