--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
 		"babel-eslint": "10.0.3",
 		"babel-loader": "^8.0.6",
 		"css-loader": "^3.2.0",
-		"eslint": "6.5.1",
+		"eslint": "^6.6.0",
 		"eslint-config-standard": "14.1.0",
 		"eslint-config-standard-jsx": "8.1.0",
 		"eslint-config-standard-react": "9.2.0",
