--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
 		"eslint-plugin-standard": "4.0.1",
 		"husky": "3.0.8",
 		"jsdom": "9.5.0",
-		"prettier": "1.18.2",
+		"prettier": "^1.19.1",
 		"pretty-quick": "^1.5.1",
 		"react-addons-test-utils": "^15.6.2",
 		"react-test-renderer": "16.10.2",
