Add eslint plugins for prettier

--- a/package.json
+++ b/package.json
@@ -94,10 +94,12 @@
 		"babel-loader": "^8.0.6",
 		"css-loader": "^3.2.0",
 		"eslint": "^6.6.0",
+		"eslint-config-prettier": "^6.5.0",
 		"eslint-config-standard": "14.1.0",
 		"eslint-config-standard-jsx": "8.1.0",
 		"eslint-config-standard-react": "9.2.0",
 		"eslint-loader": "3.0.2",
+		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-promise": "4.2.1",
 		"eslint-plugin-react": "7.16.0",
 		"eslint-plugin-standard": "4.0.1",
