upgrade mocha, chai, chai-http, fix some yarn messages, change test timeout to 1000 (default) now that promises are handled correctly
Had to remove husky because husky was causing errors.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"prepare": "webpack",
 		"start": "NODE_ENV=localhost nodemon ./server/server.js",
 		"startdb": "mongod --dbpath ~/.hah/data",
-		"test": "NODE_ENV=test mocha 'server/test/test.js' --timeout 3000",
+		"test": "NODE_ENV=test mocha 'server/test/test.js'",
 		"test-data": "NODE_ENV=localhost node ./server/data-import/test-data.js",
 		"watch": "yarn && webpack --watch"
 	},
@@ -42,8 +42,6 @@
 		"bluebird": "^3.4.7",
 		"body-parser": "^1.16.1",
 		"boom": "^4.3.1",
-		"chai": "^3.5.0",
-		"chai-http": "^3.0.0",
 		"cheerio": "^1.0.0-rc.1",
 		"classnames": "^2.2.6",
 		"colors": "^1.1.2",
@@ -59,7 +57,6 @@
 		"history": "^4.4.0",
 		"lodash": "4.17.13",
 		"log": "^1.4.0",
-		"mocha": "^3.2.0",
 		"moment": "2.19.3",
 		"mongodb": "^3.3.4",
 		"mongodb-extjson": "^3.0.3",
@@ -67,8 +64,10 @@
 		"morgan": "^1.8.1",
 		"passport": "^0.4.0",
 		"passport-facebook-token": "^3.3.0",
+		"prop-types": "^15.7.2",
 		"ramda": "0.26.1",
 		"react": "16.10.2",
+		"react-addons-test-utils": "^15.6.2",
 		"react-dom": "16.10.2",
 		"react-facebook-login": "^4.1.1",
 		"react-imgix": "^9.0.0",
@@ -93,6 +92,8 @@
 		"@babel/preset-react": "7.6.3",
 		"babel-eslint": "10.0.3",
 		"babel-loader": "^8.0.6",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
 		"css-loader": "^3.2.0",
 		"eslint": "^6.6.0",
 		"eslint-config-prettier": "^6.5.0",
@@ -100,15 +101,16 @@
 		"eslint-config-standard-jsx": "8.1.0",
 		"eslint-config-standard-react": "9.2.0",
 		"eslint-loader": "3.0.2",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-promise": "4.2.1",
 		"eslint-plugin-react": "7.16.0",
 		"eslint-plugin-standard": "4.0.1",
-		"husky": "3.0.8",
 		"jsdom": "9.5.0",
+		"mocha": "^6.2.2",
 		"prettier": "^1.19.1",
 		"pretty-quick": "^1.5.1",
-		"react-addons-test-utils": "^15.6.2",
 		"react-test-renderer": "16.10.2",
 		"style-loader": "^1.0.0",
 		"svg-to-react-cli": "^1.5.0",
