--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
 		"react-typeform-embed": "^0.2.1",
 		"redux": "^4.0.4",
 		"redux-form": "^8.2.6",
-		"redux-thunk": "^2.3.0",
-		"url-parse": "^1.4.7"
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.6.4",
