--- a/package.json
+++ b/package.json
@@ -77,11 +77,13 @@
 		"react-responsive": "8.0.1",
 		"react-router-dom": "5.1.2",
 		"react-router-tabs": "^1.3.2",
+		"react-slick": "^0.25.2",
 		"react-tooltip": "3.11.1",
 		"react-typeform-embed": "^0.2.1",
 		"redux": "^4.0.4",
 		"redux-form": "^8.2.6",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
 		"@babel/core": "7.6.4",
