--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"cookie-parser": "^1.4.3",
 		"cors": "^2.8.1",
 		"csv": "^2.0.0",
+		"email-validator": "^2.0.4",
 		"express": "^4.15.3",
 		"express-boom": "^2.0.0",
 		"express-session": "^1.15.2",
