--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
 		"react-typeform-embed": "^0.2.1",
 		"redux": "^4.0.4",
 		"redux-form": "^8.2.6",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"validator": "^13.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.6.4",
