--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"express-boom": "^2.0.0",
 		"express-session": "^1.15.2",
 		"formik": "^2.1.4",
+		"google-libphonenumber": "^3.2.8",
 		"history": "^4.4.0",
 		"lodash": "4.17.13",
 		"log": "^1.4.0",
